# pneumonia_x_ray

./: .gitignore  pyproject.toml
notebooks/: 1-creating_dataset.ipynb  2-train_model.ipynb
