[tool.poetry]
name = "pneumonia-xray"
version = "1.0"
description = "Image classification model for Pneumonial X-Ray images"
authors = ["Marlon Menendez <marlon.menendezg@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pneumonia_xray"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
transformers = "^4.29.2"
accelerate = "^0.19.0"
datasets = "^2.12.0"
evaluate = "^0.4.0"
jupyterlab = "^4.0.0"
tensorflow-macos = "^2.12.0"
tensorflow-metal = "^0.8.0"
flake8 = "^6.0.0"
black = "^23.3.0"
matplotlib = "^3.7.1"
pandas = "^2.0.1"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
