[tool.poetry]
name = "pneumonia-xray"
version = "1.0"
description = "Classifier of Pneumonia Chest X-Ray images using ViT"
authors = ["Marlon Menendez <marlon.menendezg@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pneumonia_xray"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow-macos = "^2.12.0"
tensorflow-metal = "^1.0.1"
flake8 = "^6.0.0"
black = "^23.3.0"
matplotlib = "^3.7.1"
pandas = "^2.0.2"
polars = "^0.18.2"
seaborn = "^0.12.2"
transformers = "^4.30.2"
accelerate = "^0.20.3"
datasets = "^2.12.0"
evaluate = "^0.4.0"
jupyterlab = "^4.0.2"
pylance = "^0.4.21"
pylint = "^2.17.4"
ipykernel = "^6.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
